Codegen perf improvements